# GameProject

./: CMakeLists.txt  README.md
Classes/: AppDelegate.cpp  GameScene.h  HelloWorldScene.cpp  HelloWorldScene.h  IScene.h  MainMenu.cpp  MainMenu.h
cmake/: FindSDL2.cmake
src/: Main.cpp
